// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-entities.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Some escaped characters: &lt; &gt; &amp;</p>
=====================================output=====================================
<p>
  Some escaped characters: &lt; &gt; &amp;
</p>
================================================================================
`;

exports[`html-entities.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<p>Some escaped characters: &lt; &gt; &amp;</p>
=====================================output=====================================
<p>
  Some escaped characters: &lt; &gt; &amp;
</p>
================================================================================
`;
